--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -4,11 +4,11 @@ metadata:
   name: docker-image-build
 spec:
   containers:
-    - name: jenkins-agent
-      image: jenkins/inbound-agent:latest
+    - name: ez-docker-helm-build
+      image: ezezeasy/ez-docker-helm-build:1.41
       imagePullPolicy: Always
-      command: ["cat"]
-      tty: true
+      securityContext:
+        privileged: true
 
     - name: python-test
       image: python:3.9-slim
