--- a/application.yaml
+++ b/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: recommendation_app
+  name: recommendation-app
   namespace: argocd
 spec:
   project: default
