--- a/mychart/values.yaml
+++ b/mychart/values.yaml
@@ -72,17 +72,16 @@ resources: {}
   #   memory: 128Mi
 
 livenessProbe:
-  httpGet:
-    path: /healthz
+  tcpSocket:
     port: 5000
-  initialDelaySeconds: 10
+  initialDelaySeconds: 30
   periodSeconds: 10
   timeoutSeconds: 5
   failureThreshold: 3
   successThreshold: 1
+
 readinessProbe:
-  httpGet:
-    path: /healthz
+  tcpSocket:
     port: 5000
   initialDelaySeconds: 10
   periodSeconds: 10
