--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,17 +9,26 @@ services:
       - mongo
     environment:
       - MONGO_URI=mongodb://root:root@mongo:27017/recommendations_db?authSource=admin
-    
 
   mongo:
     image: mongo:latest
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: root
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root
     volumes:
       - mongo-data:/data/db
     ports:
       - "27017:27017"
+
+  test:
+    build:
+      context: .
+      dockerfile: Dockerfile.test
+    depends_on:
+      - app
+      - mongo
+    environment:
+      - MONGO_URI=mongodb://root:root@mongo:27017/recommendations_db?authSource=admin
 
 volumes:
   mongo-data:
