--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-Flask>=2.2
-pymongo>=3.11
-dnspython>=1.16.0
-flask-Pymongo
-
-
-
+Flask==2.0.1
+pymongo==3.12.0
+werkzeug==2.0.1
+pytest
+flask_pymongo
